log
Wed 20 Mar 2024 01:58:24 PM UTC: 
 tests:  0|5
total_score: 0/70
b5ec0a7
Wed 20 Mar 2024 02:05:46 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   50 |        *i = i;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
b1f7080
Wed 20 Mar 2024 02:07:44 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
6aa352f
Wed 20 Mar 2024 02:08:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2a1029d
